# lis2dh-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  no-std.yml  quality.yml
src/: asynch.rs  lib.rs  register.rs  sync.rs
