[package]
name = "lis2dh"
version = "0.2.0"
edition = "2024"
description = "Driver crate for the ST LIS2DH12 accelerometer"
repository = "https://github.com/andresovela/lis2dh-rs"
documentation = "https://docs.rs/lis2dh"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["accelerometer", "driver", "i2c"]
categories = ["embedded", "no-std"]
exclude = [".github"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
async = ["dep:embedded-hal-async"]
